@@ -4,11 +4,15 @@ import io.github.niestrat99.advancedteleport.CoreClass;
 import io.github.niestrat99.advancedteleport.config.NewConfig;
 import io.github.niestrat99.advancedteleport.config.Spawn;
 import io.github.niestrat99.advancedteleport.hooks.BorderPlugin;
+import io.github.niestrat99.advancedteleport.hooks.ClaimPlugin;
 import io.github.niestrat99.advancedteleport.hooks.ImportExportPlugin;
 import io.github.niestrat99.advancedteleport.hooks.MapPlugin;
 import io.github.niestrat99.advancedteleport.hooks.borders.ChunkyBorderHook;
 import io.github.niestrat99.advancedteleport.hooks.borders.VanillaBorderHook;
 import io.github.niestrat99.advancedteleport.hooks.borders.WorldBorderHook;
+import io.github.niestrat99.advancedteleport.hooks.claims.GriefPreventionClaimHook;
+import io.github.niestrat99.advancedteleport.hooks.claims.LandsClaimHook;
+import io.github.niestrat99.advancedteleport.hooks.claims.WorldGuardClaimHook;
 import io.github.niestrat99.advancedteleport.hooks.imports.EssentialsHook;
 import io.github.niestrat99.advancedteleport.hooks.maps.DynmapHook;
 import io.github.niestrat99.advancedteleport.sql.HomeSQLManager;
@@ -16,9 +20,9 @@ import io.github.niestrat99.advancedteleport.sql.WarpSQLManager;
 import io.github.niestrat99.advancedteleport.utilities.RandomCoords;
 import org.bukkit.Location;
 import io.github.niestrat99.advancedteleport.hooks.maps.SquaremapHook;
-import io.github.niestrat99.advancedteleport.utilities.RandomCoords;
 import org.bukkit.World;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
@@ -28,6 +32,7 @@ public class PluginHookManager {
 
     private HashMap<String, ImportExportPlugin> importPlugins;
     private HashMap<String, BorderPlugin> borderPlugins;
+    private HashMap<String, ClaimPlugin> claimPlugins;
     private HashMap<String, MapPlugin> mapPlugins;
     private static PluginHookManager instance;
 
@@ -39,14 +44,16 @@ public class PluginHookManager {
     public void init() {
         importPlugins = new HashMap<>();
         borderPlugins = new HashMap<>();
+        claimPlugins = new HashMap<>();
         mapPlugins = new HashMap<>();
 
+        // Import plugins
         loadPlugin(importPlugins, "essentials", EssentialsHook.class);
 
         // World border Plugins
-        loadBorderPlugin("worldborder", WorldBorderHook.class);
-        loadBorderPlugin("chunkyborder", ChunkyBorderHook.class);
-        loadBorderPlugin("vanilla", VanillaBorderHook.class);
+        loadPlugin(borderPlugins, "worldborder", WorldBorderHook.class);
+        loadPlugin(borderPlugins, "chunkyborder", ChunkyBorderHook.class);
+        loadPlugin(borderPlugins, "vanilla", VanillaBorderHook.class);
 
         // Claim Plugins
         loadPlugin(claimPlugins, "worldguard", WorldGuardClaimHook.class);
@@ -84,21 +91,10 @@ public class PluginHookManager {
 
     private <T> void loadPlugin(HashMap<String, T> map, String name, Class<? extends T> clazz) {
         try {
-            map.put(name, clazz.newInstance());
-        } catch (InstantiationException | IllegalAccessException e) {
+            map.put(name, clazz.getConstructor().newInstance());
+        } catch (InstantiationException | NoSuchMethodException | InvocationTargetException | IllegalAccessException e) {
             e.printStackTrace();
-        } catch (NoClassDefFoundError ignored) {
-
-        }
-    }
-
-    private void loadBorderPlugin(String name, Class<? extends BorderPlugin> clazz) {
-        try {
-            borderPlugins.put(name, clazz.newInstance());
-        } catch (InstantiationException | IllegalAccessException e) {
-            e.printStackTrace();
-        } catch (NoClassDefFoundError ignored) {
-
+        } catch (NoClassDefFoundError ignored) { // Why are you like this essentials?
         }
     }
 
